--- a/ConsoleApp1/NullHandling/NullHandling.csproj
+++ b/ConsoleApp1/NullHandling/NullHandling.csproj
@@ -4,13 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\PacktLibrary\PacktLibrary.csproj" />
-  </ItemGroup>
-
 	<ItemGroup>
-		<Using Include="System.Console" Static="true" />
+		<Using Include="System.Console" Static="true"/>
 	</ItemGroup>
+
 </Project>
